recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:14: error: illegal start of simple expression
  snowSide(,);
           ^Koch:16: error: ')' expected but '}' found.
} 
^